# ferrite

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  RELEASE_NOTES.md  examples.fe  mathutils.fe
docs/: grammar.ebnf  semantics.md  standard-library.md  syntax.md  type-system.md
src/: main.rs
src/ast/: mod.rs
src/codegen/: compiler.rs  llvm.rs  mod.rs  opcodes.rs
src/errors/: mod.rs
src/imports/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/runtime/: mod.rs  vm.rs
src/semantic/: mod.rs
src/stdlib/: collections.fe  io.fe  math.fe  mathutils.fe  mod.rs  strings.fe
src/types/: mod.rs  tensor.rs
std/: functional.fe
tests/: fail_01_type_mismatch.fe  fail_02_undefined_var.fe  fail_03_return_mismatch.fe  fail_04_non_bool_condition.fe  fail_05_stop_skip_outside.fe  fail_06_duplicate_var.fe  fail_07_no_coercion.fe  fail_08_syntax_missing_semi.fe  fail_09_syntax_missing_brace.fe  fail_10_negate_string.fe  fail_11_tensor_bad_elem.fe  fail_12_logic_non_bool.fe  fail_13_call_args.fe  pass_01_primitives.fe  pass_02_functions.fe  pass_03_control_flow.fe  pass_04_groups.fe  pass_05_enums_match.fe  pass_06_constants.fe  pass_07_generics_where.fe  pass_08_tensors.fe  pass_09_ml_blocks.fe  pass_10_expressions.fe  pass_11_builtins.fe  pass_12_stdlib.fe  run_tests.sh  showcase.fe
