[package]
name    = "ferrite"
version = "2.1.0"
edition = "2021"
authors = ["Vishwanath M M"]
description = "The Ferrite programming language – fast, friendly, built in Rust."

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
inkwell = { version = "0.8.0", features = ["llvm15-0"], optional = true }

[features]
llvm = ["inkwell"]
